# couchbase-cxx-client

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: sanitizers.yml  tests.yml
.iwyu/: asio.imp  couchbase-core.imp
cmake/: Bundler.cmake  DetectStandardFilesystem.cmake  Documentation.cmake  GrpcProtobuf.cmake  Packaging.cmake  Profiler.cmake  Profilers.cmake  StaticAnalyzers.cmake  Testing.cmake  ThirdPartyDependencies.cmake  build_config.hxx.in  tarball_glob.txt
core/: bucket.cxx  bucket.hxx  cluster.cxx  cluster.hxx  cluster_credentials.hxx  config_listener.hxx  operations.hxx  operations_fwd.hxx  origin.cxx  origin.hxx
core/impl/: binary_collection.cxx  bucket.cxx  cluster.cxx  collection.cxx  collection_query_index_manager.cxx  core_error_context.cxx  core_error_context.hxx  core_operation_info.hxx  core_view_error_context.hxx  observe_poll.cxx  query.cxx  query_index_manager.cxx  scope.cxx  search.cxx  search.hxx  watch_query_indexes.cxx  watch_query_indexes.hxx
core/io/: http_command.hxx  http_context.hxx  http_session_manager.cxx  http_session_manager.hxx  mcbp_session.cxx
core/logger/: CMakeLists.txt
core/meta/: CMakeLists.txt  version.cxx
core/metrics/: CMakeLists.txt
core/new_core/: agent.cxx  agent.hxx  agent_configuration.hxx  auth_certificate_request.hxx  auth_client.hxx  auth_credentials.hxx  auth_credentials_request.hxx  auth_handler.hxx  auth_mechanism.cxx  auth_mechanism.hxx  auth_provider.hxx  base_http_config_controller.hxx  best_effort_retry_strategy.cxx  best_effort_retry_strategy.hxx  bootstrap_properties.hxx  bucket_capabilities.hxx  bucket_capabilities_verifier.hxx  bucket_type.hxx  cccp_config_controller.cxx  cccp_config_controller.hxx  cccp_poller_properties.hxx  certificate_auth_provider.cxx  certificate_auth_provider.hxx  circuit_breaker.hxx  circuit_breaker_callback.cxx  circuit_breaker_callback.hxx  circuit_breaker_configuration.hxx  circuit_breaker_state.hxx  cluster_capabilities.hxx  cluster_state.hxx  completion_token.hxx  compression_configuration.hxx  config_manager.hxx  (+105 more)
couchbase/: bucket.hxx  cluster.cxx  cluster.hxx  cluster_options.hxx  collection.hxx  collection_query_index_manager.hxx  query_options.hxx
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/external_circuit_breaker/: circuit_breaker.cxx  circuit_breaker.hxx  main.cxx
test/: CMakeLists.txt  benchmark_integration_get.cxx  main.cxx  test_helper.hxx  test_integration_analytics.cxx  test_integration_arithmetic.cxx  test_integration_binary_operations.cxx  test_integration_collections.cxx  test_integration_connect.cxx  test_integration_crud.cxx  test_integration_diagnostics.cxx  test_integration_durability.cxx  test_integration_examples.cxx  test_integration_management.cxx  test_integration_meter.cxx  test_integration_query.cxx  test_integration_range_scan.cxx  test_integration_read_replica.cxx  test_integration_search.cxx  test_integration_subdoc.cxx  test_integration_tracer.cxx  test_integration_transcoders.cxx  test_transaction_context.cxx  test_transaction_examples.cxx  test_transaction_public_async_api.cxx  test_transaction_public_blocking_api.cxx  test_transaction_simple.cxx  test_transaction_simple_async.cxx  test_unit_config_profiles.cxx  test_unit_configuration_management.cxx  test_unit_connection_string.cxx  test_unit_json_streaming_lexer.cxx  test_unit_json_transcoder.cxx  test_unit_jsonsl.cxx  test_unit_options.cxx  test_unit_transaction_logging.cxx  test_unit_transaction_utils.cxx  test_unit_utils.cxx  test_unit_waitable_op_list.cxx
test/data/: CMakeLists.txt  bucket_config_with_external_addresses_without_ports.json
test/tools/: tool_kv_loader.cxx
test/utils/: CMakeLists.txt  integration_shortcuts.hxx  integration_test_guard.cxx  test_data.cxx  wait_until.cxx
tools/: CMakeLists.txt  pillowfight.cxx  sysinfo.cxx  utils.cxx
(+142 files in other folders)
